--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -40,6 +40,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Uploads/Import">
+                <span class="oi oi-cloud-upload" aria-hidden="true"></span> * 엑셀 업로드
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/FrmFileUploadTest/">
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * FrmFileUploadTest
             </NavLink>
