--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -39,6 +39,7 @@
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * Upload
             </NavLink>
         </div>
+       
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Uploads/Import">
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * 엑셀 업로드
@@ -47,6 +48,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/FrmFileUploadTest/">
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * FrmFileUploadTest
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Replys/">
+                <span class="oi oi-book" aria-hidden="true"></span> * Replys
             </NavLink>
         </div>
         <div class="nav-item px-3">
