--- a/ArticleAppBlazorServer/Pages/Replys/Manage.razor
+++ b/ArticleAppBlazorServer/Pages/Replys/Manage.razor
@@ -1,6 +1,8 @@
-﻿@page "/Replys/manage"
+﻿@page "/Replys"
+@page "/Replys/manage"
 @page "/Replys/manage/{ParentId:int}"
 @* @page "/uploads/manage/{ParentId:int}/{ParentKey}" *@
+
 
 <h3>Manage</h3>
 
@@ -14,7 +16,7 @@
             <NotAuthorized>
                 <a href="/Replys/Index" class="btn btn-primary">List</a>
                 <input type="button" name="btnCreate" value="Create(Modal)" class="btn btn-primary"
-                       @onclick="ShowEditorForm" />
+                @onclick="ShowEditorForm" />
                 <a href="/Replys/Report" class="btn btn-primary">Report</a>
             </NotAuthorized>
         </AuthorizeView>
@@ -41,12 +43,23 @@
         else
         {
             <table class="table table-bordered table-hover">
+                <colgroup>
+                    <col style="width: 5%;">
+                    <col style="width: 20%;">
+                    <col style="width: 20%;">
+                    <col style="width: 10%;">
+                    <col style="width: 10%;">
+                    <col style="width: 10%;">
+                    <col style="width: 15%;">
+                    <col style="width: 15%;">
+                </colgroup>
                 <thead class="thead-light">
                     <tr>
                         <th>Id</th>
-                        <th @onclick="@(() => SortByName())" style="cursor: pointer;">Name <UploadApp.Pages.Uploads.Components.SortOrderArrow SortColumn="Name" SortOrder="@sortOrder"></UploadApp.Pages.Uploads.Components.SortOrderArrow></th>
                         <th @onclick="@(() => SortByTitle())" style="cursor: pointer;">Title <UploadApp.Pages.Uploads.Components.SortOrderArrow SortColumn="Title" SortOrder="@sortOrder"></UploadApp.Pages.Uploads.Components.SortOrderArrow></th>
+                        <th @onclick="@(() => SortByName())" style="cursor: pointer;">Name <UploadApp.Pages.Uploads.Components.SortOrderArrow SortColumn="Name" SortOrder="@sortOrder"></UploadApp.Pages.Uploads.Components.SortOrderArrow></th>
                         <th>Created</th>
+                        <th>조회수</th>
                         <th>IsPinned</th>
                         <th>Action</th>
                         <th>Admin</th>
@@ -56,7 +69,7 @@
                 {
                     <tbody>
                         <tr>
-                            <td colspan="4" class="text-center">
+                            <td colspan="7" class="text-center">
                                 <p>데이터가 없습니다.</p>
                             </td>
                         </tr>
@@ -68,14 +81,28 @@
                         @foreach (var m in models)
                         {
                             <tr>
-                                <td>@m.Id</td>
+                                <td >
+                                    @if (m.Step == 0)
+                                    {
+                                        @m.Id
+                                    }
+                                    else
+                                    {
+                                        <text>&nbsp;</text>
+                                    }
+                                </td>
+                                <td>@m.Title</td>
                                 <td @onclick="@(()=>NameClick(m.Id))">
                                     <a href="/Replys/Details/@m.Id">
                                         @m.Name
                                     </a>
                                 </td>
-                                <td>@m.Title</td>
-                                <td>@m.Created?.ToShortTimeString()</td>
+                                <td class="text-nowrap">
+                                    @(Dul.BoardLibrary.FuncShowTime(m.Created))
+                                </td>
+                                <td class="text-center small">
+                                    @m.ReadCount
+                                </td>
                                 <td>@((m.IsPinned == true) ? "공지" : "")</td>
                                 <td>
                                     <a href="/Replys/Details/@m.Id" class="btn btn-light">Details</a>
