--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -56,6 +56,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Movies/">
+                <span class="oi oi-phone" aria-hidden="true"></span> * Movies
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
