--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -38,8 +38,7 @@
             <NavLink class="nav-link" href="/Uploads/">
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * Upload
             </NavLink>
-        </div>
-       
+        </div>       
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Uploads/Import">
                 <span class="oi oi-cloud-upload" aria-hidden="true"></span> * 엑셀 업로드
@@ -65,9 +64,19 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Buffets/Noodles">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Noodls
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Candidates">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Candidates
+            </NavLink>
+        </div>
     </nav>
     <div>
-        <img src="https://www.stmmall.co.kr/product_images/d_images/XG770008_d1.JPG" width="100%"/>
+        <img src="https://www.stmmall.co.kr/product_images/d_images/XG770008_d1.JPG" width="10%"/>
     </div>
 </div>
 
