09_02_IDbContextFactory 인터페이스의 CreateDbContext 메서드로 DbContext 생성

--- a/ArticleAppBlazorServer/Pages/Candidates/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Index.razor
@@ -3,6 +3,7 @@
 @page "/Candidates/List/{Page:int?}"
 @using Microsoft.EntityFrameworkCore
 
+@* @inject CandidateAppDbContext _Context *@
 @inject IDbContextFactory<CandidateAppDbContext> _ContextFactory
 @inject IJSRuntime JSRuntime
 @inject ILogger<Index> LoggerReference
