--- a/ArticleAppBlazorServer/Pages/Candidates/_BAK/CreateOld.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/_BAK/CreateOld.razor
@@ -1,4 +1,4 @@
-﻿@page "/Candidates/Create"
+﻿@* @page "/Candidates/Create" *@
 
 
 @inject IDbContextFactory<CandidateAppDbContext> _ContextFactory
@@ -20,10 +20,36 @@
 }
 <div class="row">
     <div class="col-md-4">
-        <ArticleAppBlazorServer.Pages.Candidates.Components.EditorForm 
-        Model="@Model" Busy="@Busy"
-        OnSubmitCallback="@OnSubmitCallback">
-        </ArticleAppBlazorServer.Pages.Candidates.Components.EditorForm>
+        <EditForm Model="Model" OnValidSubmit="FormSubmit" OnInValidSubmit="@HandleInvalidSubmit">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            @* <form action="/Candidates/Create" method="post"> *@
+            <div class="form-group">
+                <label class="control-label" for="txtFirstName">FirstName</label>
+                @* <input class="form-control" type="text" data-val="true" data-val-length="The field FirstName must be a string with a maximum length of 50." data-val-length-max="50" data-val-required="The FirstName field is required." id="FirstName" maxlength="50" name="FirstName" value="" /> *@
+                <InputText @bind-Value="Model.FirstName" id="txtFirstName" class="form-control" placeholder="Enter FirstName" />
+                @* <span class="text-danger field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span> *@
+                <ValidationMessage For="() => Model.FirstName" />
+            </div>
+            <div class="form-group">
+                <label class="control-label" for="txtLastName">LastName</label>
+                @* <input class="form-control" type="text" data-val="true" data-val-length="The field LastName must be a string with a maximum length of 50." data-val-length-max="50" data-val-required="The LastName field is required." id="LastName" maxlength="50" name="LastName" value="" /> *@
+                <InputText @bind-Value="Model.LastName" id="txtLastName" class="form-control" placeholder="Enter LastName" />
+                @* <span class="text-danger field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span> *@
+                <ValidationMessage For="() => Model.LastName" />
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label" for="IsEnrollment">
+                    @* <input class="form-check-input" type="checkbox" data-val="true" data-val-required="The IsEnrollment field is required." id="IsEnrollment" name="IsEnrollment" value="true" /> *@
+                    <InputCheckbox @bind-Value="Model.IsEnrollment" id="IsEnrollment" class="form-check-input" />
+                    Is Enrollment
+                </label>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" disabled="@Busy"/>
+            </div>
+            @* </form> *@
+        </EditForm>
     </div>
 </div>
 <div class="form-group">
@@ -82,15 +108,17 @@
             Busy = false;
         }
     }
-
+    /// <summary>
+    /// Alert 창을 닫기 위한 메소드
+    /// </summary>
+    /// <param name="args"></param>
 
     /// <summary>
     /// OnInValidSubmit
     /// 유효성 검사 실패 시 처리
     /// Blazor의 OnInvalidSubmit 이벤트는 유효성 검사에 실패했을 때 호출되며, 이벤트 핸들러는 EditContext 객체를 매개변수로 받을 수 있습니다. 이 EditContext는 폼의 상태와 유효성 검사 정보를 포함합니다.
-    protected void HandleInvalidSubmit(EditContext editContext)
+    protected async Task HandleInvalidSubmit(EditContext editContext)
     {
-        
         var ValidationMessages = editContext.GetValidationMessages().ToList();
         // 로그에 메시지 출력
         foreach (var message in ValidationMessages)
@@ -101,28 +129,9 @@
         //LoggerReference.LogError($"※※※ Error2 (editContext.GetValidationMessages(FirstName)) : {editContext.GetValidationMessages(new FieldIdentifier(Model, nameof(Model.FirstName))).ToString()}");
         StatusMessage = "";
     }
-    protected void HandleInvalidSubmit()
-    {
-        StatusMessage = "";
-    }
-    /// <summary>
-    /// Alert 창을 닫기 위한 메소드
-    /// </summary>
-    /// <param name="args"></param>
+
     private void CloseAlert(MouseEventArgs args)
     {
         StatusMessage = null;
-    }
-
-    protected async Task OnSubmitCallback(bool isValid)
-    {
-        if (isValid)
-        {
-            await FormSubmit();
-        }
-        else
-        {
-            HandleInvalidSubmit();
-        }
     }
 }
