--- a/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Components/EditorForm.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Components/EditorForm.razor
@@ -1,29 +1,24 @@
-﻿@if (Model is not null)
+﻿@namespace ArticleAppBlazorServer.Pages.Candidates.CandidatesNames.Components
+
+@if (Model is not null)
 {
     <EditForm Model="Model" OnValidSubmit="FormSubmit" OnInValidSubmit="@HandleInvalidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
-        @* <form action="/Candidates/Create" method="post"> *@
         <div class="form-group">
             <label class="control-label" for="txtFirstName">FirstName</label>
-            @* <input class="form-control" type="text" data-val="true" data-val-length="The field FirstName must be a string with a maximum length of 50." data-val-length-max="50" data-val-required="The FirstName field is required." id="FirstName" maxlength="50" name="FirstName" value="" /> *@
             <InputText @bind-Value="Model.FirstName" id="txtFirstName" class="form-control" placeholder="Enter FirstName" />
-            @* <span class="text-danger field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span> *@
             <ValidationMessage For="() => Model.FirstName" />
         </div>
         <div class="form-group">
             <label class="control-label" for="txtLastName">LastName</label>
-            @* <input class="form-control" type="text" data-val="true" data-val-length="The field LastName must be a string with a maximum length of 50." data-val-length-max="50" data-val-required="The LastName field is required." id="LastName" maxlength="50" name="LastName" value="" /> *@
             <InputText @bind-Value="Model.LastName" id="txtLastName" class="form-control" placeholder="Enter LastName" />
-            @* <span class="text-danger field-validation-valid" data-valmsg-for="FirstName" data-valmsg-replace="true"></span> *@
             <ValidationMessage For="() => Model.LastName" />
         </div>
-        <div class="form-group form-check">
-            <label class="form-check-label" for="IsEnrollment">
-                @* <input class="form-check-input" type="checkbox" data-val="true" data-val-required="The IsEnrollment field is required." id="IsEnrollment" name="IsEnrollment" value="true" /> *@
-                <InputCheckbox @bind-Value="Model.IsEnrollment" id="IsEnrollment" class="form-check-input" />
-                Is Enrollment
-            </label>
+        <div class="form-group">
+            <label class="control-label" for="txtLastName">MiddleName</label>
+            <InputText @bind-Value="Model.MiddleName" id="txtMiddleName" class="form-control" placeholder="Enter MiddleName" />
+            <ValidationMessage For="() => Model.MiddleName" />
         </div>
         <div class="form-group">
             @if (IsEdit)
@@ -43,7 +38,7 @@
 
 @code{
     [Parameter]
-    public Candidate? Model { get; set; }
+    public CandidateName? Model { get; set; }
 
     [Parameter]
     public bool Busy { get; set; }
