PIP 보기 영상 다운로드 19_02_이미 완성된 Candidates 기능을 CandidatesNames 기능으로 빠르게 가져오기

--- a/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Create.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Create.razor
@@ -27,7 +27,7 @@
     </div>
 </div>
 <div class="form-group">
-    <a href="/Candidates">Back to List</a>
+    <a href="/Candidates/CandidatesNames">Back to List</a>
 </div>
 
 @code {
@@ -62,7 +62,7 @@
                 {
                     ctx.CandidatesNames.Add(Model);
                     await ctx.SaveChangesAsync();
-                    LoggerReference.LogInformation($"※※※ ({nameof(FormSubmit)}):Candidate Create");
+                    LoggerReference.LogInformation($"※※※ ({nameof(FormSubmit)}):CandidatesNames Create");
 
                 }
                 StatusMessage = "Success";
