19_03_component 태그 헬퍼를 사용하여 CSHTML 페이지에 Blazor 컴포넌트 포함하여 실행시키기

--- a/ArticleAppBlazorServer/Pages/Candidates/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Index.razor
@@ -19,6 +19,7 @@
 <p>
     <a href="/Candidates/Create">Create New</a>
     <a href="/Candidates/CandidatesNames">CandidatesNames</a>
+    <a href="/ComponentTest">ComponentTest</a>
 </p>
 
 @if (Candidates is null)
