--- a/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Components/EditorForm.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/CandidatesNames/Components/EditorForm.razor
@@ -5,32 +5,43 @@
     <EditForm Model="Model" OnValidSubmit="FormSubmit" OnInValidSubmit="@HandleInvalidSubmit">
         <DataAnnotationsValidator />
         <ValidationSummary />
-        <div class="form-group">
-            <label class="control-label" for="txtFirstName">FirstName</label>
-            <InputText @bind-Value="Model.FirstName" id="txtFirstName" class="form-control" placeholder="Enter FirstName" />
-            <ValidationMessage For="() => Model.FirstName" />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="txtLastName">LastName</label>
-            <InputText @bind-Value="Model.LastName" id="txtLastName" class="form-control" placeholder="Enter LastName" />
-            <ValidationMessage For="() => Model.LastName" />
-        </div>
-        <div class="form-group">
-            <label class="control-label" for="txtLastName">MiddleName</label>
-            <InputText @bind-Value="Model.MiddleName" id="txtMiddleName" class="form-control" placeholder="Enter MiddleName" />
-            <ValidationMessage For="() => Model.MiddleName" />
-        </div>
-        <div class="form-group">
-            @if (IsEdit)
-            {
-                <input type="submit" value="Edit" class="btn btn-primary" disabled="@Busy" />
-                <input type="button" value="Cancel" class="btn btn-secondary" disabled="@Busy"
-                       @onclick="HandleCancel" />
-            }
-            else
-            {
-                <input type="submit" value="Create" class="btn btn-primary" disabled="@Busy" />
-            }
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    @* <label class="control-label" for="txtFirstName">FirstName</label> *@
+                    <InputText @bind-Value="Model.FirstName" id="txtFirstName" class="form-control" placeholder="Enter FirstName" />
+                    <ValidationMessage For="() => Model.FirstName" />
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    @* <label class="control-label" for="txtLastName">LastName</label> *@
+                    <InputText @bind-Value="Model.LastName" id="txtLastName" class="form-control" placeholder="Enter LastName" />
+                    <ValidationMessage For="() => Model.LastName" />
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    @* <label class="control-label" for="txtLastName">MiddleName</label> *@
+                    <InputText @bind-Value="Model.MiddleName" id="txtMiddleName" class="form-control" placeholder="Enter MiddleName" />
+                    <ValidationMessage For="() => Model.MiddleName" />
+                </div>
+
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    @if (IsEdit)
+                    {
+                        <input type="submit" value="Edit" class="btn btn-primary" disabled="@Busy" />
+                        <input type="button" value="Cancel" class="btn btn-secondary" disabled="@Busy"
+                               @onclick="HandleCancel" />
+                    }
+                    else
+                    {
+                        <input type="submit" value="Create" class="btn btn-primary" disabled="@Busy" />
+                    }
+                </div>
+            </div>
         </div>
         @* </form> *@
     </EditForm>
