--- a/ArticleAppBlazorServer/Pages/Candidates/Components/EditorForm.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Components/EditorForm.razor
@@ -43,7 +43,7 @@
 
 @code{
     [Parameter]
-    public Candidate? Model { get; set; }
+    public CandidatesIncome? Model { get; set; }
 
     [Parameter]
     public bool Busy { get; set; }
