--- a/ArticleAppBlazorServer/Pages/Candidates/_BAK/CreateOld.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/_BAK/CreateOld.razor
@@ -57,7 +57,7 @@
 </div>
 
 @code {
-    public Candidate? Model { get; set; }
+    public CandidatesIncome? Model { get; set; }
 
     //현재 상태 메시지
     public string? StatusMessage { get; set; }
