--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -7,3 +7,17 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<div>
+    <a href="/FrmFileUploadTest/">* FrmFileUploadTest</a>
+</div>
+<div>
+    <a href="/Buffets/Noodles">Noodls</a>
+</div>
+<div>
+    <a href="/AuthenticationAuthorizationStudy">AuthenticationA..</a>
+</div>
+<div>
+    <a href="/Administrations/Users"></a>
+</div>
+
