01_03. 닷넷코어 3.1과 Blazor(블레이저)를 사용한 풀스택 웹개발( 간단한 데이터 입출력을 진행하는 아이디어 관리자 앱 만들기)

--- a/ArticleAppBlazorServer/Pages/Candidates/Components/EditorForm.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Components/EditorForm.razor
@@ -43,7 +43,7 @@
 
 @code{
     [Parameter]
-    public CandidatesIncome? Model { get; set; }
+    public Candidate? Model { get; set; }
 
     [Parameter]
     public bool Busy { get; set; }
