--- a/ArticleAppBlazorServer/Pages/Candidates/Create.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Create.razor
@@ -31,7 +31,7 @@
 </div>
 
 @code {
-    public CandidatesIncome? Model { get; set; }
+    public Candidate? Model { get; set; }
 
     //현재 상태 메시지
     public string? StatusMessage { get; set; }
