--- a/ArticleAppBlazorServer/Pages/Candidates/Edit.razor
+++ b/ArticleAppBlazorServer/Pages/Candidates/Edit.razor
@@ -51,7 +51,7 @@ else
 @code {
     [Parameter]
     public int Id { get; set; }
-    public CandidatesIncome? Model { get; set; }
+    public Candidate? Model { get; set; }
 
     public bool Busy { get; set; }
 
