--- a/ArticleAppBlazorServer/Shared/NavMenu.razor
+++ b/ArticleAppBlazorServer/Shared/NavMenu.razor
@@ -64,7 +64,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Candidates
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Ideas">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ideas
+            </NavLink>
+        </div>
     </nav>
     <div>
         <img src="https://www.stmmall.co.kr/product_images/d_images/XG770008_d1.JPG" width="10%"/>
