todoList inmemory 만들기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -8,16 +8,37 @@ Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 
-<div>
-    <a href="/FrmFileUploadTest/">* FrmFileUploadTest</a>
-</div>
-<div>
-    <a href="/Buffets/Noodles">Noodls</a>
-</div>
-<div>
-    <a href="/AuthenticationAuthorizationStudy">AuthenticationA..</a>
-</div>
-<div>
-    <a href="/Administrations/Users"></a>
-</div>
 
+<div>
+    <a href="/FrmFileUploadTest/">
+        <span class="oi oi-pencil" aria-hidden="true"></span>* FrmFileUploadTest
+    </a>
+</div>
+<div>
+    <a href="/Buffets/Noodles">
+        <span class="oi oi-pencil" aria-hidden="true"></span> Noodls
+    </a>
+</div>
+<div>
+    <a href="/AuthenticationAuthorizationStudy"> 
+        <span class="oi oi-pencil" aria-hidden="true"></span> AuthenticationA..</a>
+</div>
+<div>
+    <a href="/Ideas"> 
+        <span class="oi oi-pencil" aria-hidden="true"></span> Ideas</a>
+</div>
+<div>
+    <a href="/TodoListInMemory">
+        <span class="oi oi-pencil" aria-hidden="true"></span> TodoListInMemory
+    </a>
+</div>
+<Dialog Title="Parameta Dialog Title">
+    <ChildContent>
+        <p>Dialog Content</p>
+    </ChildContent>
+</Dialog>
+
+@code{
+
+
+}
