02_03 Blazor 기초 강의 (BlazorApp_Bonus) 용돈 나누기 앱 만들기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -32,6 +32,11 @@ Welcome to your new app.
         <span class="oi oi-pencil" aria-hidden="true"></span> TodoListInMemory
     </a>
 </div>
+<div>
+    <a href="/Bonus">
+        <span class="oi oi-monitor" aria-hidden="true"></span> 용돈나누기
+    </a>
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
