02 04 BlazorApp BlazorForm EditForm 컴포넌트를 사용하여 폼 작성 및 폼 유효성 검사 진행하기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -37,6 +37,11 @@ Welcome to your new app.
         <span class="oi oi-monitor" aria-hidden="true"></span> 용돈나누기
     </a>
 </div>
+<div>
+    <a href="/BlazorForm">
+        <span class="oi oi-monitor" aria-hidden="true"></span> BlazorForm
+    </a>
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
