03_01_ParentChild_부모 컴포넌트에서 자식 컴포넌트로 또는 그 반대로 데이터 주고 받기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -40,8 +40,12 @@ Welcome to your new app.
 <div>
     <a href="/BlazorForm">
         <span class="oi oi-monitor" aria-hidden="true"></span> BlazorForm
+    </a>&nbsp;&nbsp;
+    <a href="/frmparent">
+        <span class="oi oi-menu" aria-hidden="true"></span> frmparent
     </a>
 </div>
+
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
