03 06 JavaScript interop을 사용하여 닷넷에서 자바스크립트를 자바스크립트에서 닷넷 메서드를 호출하기

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -45,7 +45,22 @@ Welcome to your new app.
         <span class="oi oi-menu" aria-hidden="true"></span> frmparent
     </a>
 </div>
-
+<div>
+    <a href="/MatBlazorTest">
+        <span class="oi oi-wifi" aria-hidden="true"></span> MatBlazorTest
+    </a>&nbsp;&nbsp;
+    <a href="/MatTableTest">
+        <span class="oi oi-aperture" aria-hidden="true"></span> MatTableTest
+    </a>&nbsp;&nbsp;
+    <a href="/ChartJsDemo">
+        <span class="oi oi-bar-chart" aria-hidden="true"></span> ChartJs
+    </a>
+</div>
+<div>
+    <a href="/SignaturePadDemo">
+        <span class="oi oi-wifi" aria-hidden="true"></span> SignaturePadDemo
+    </a>&nbsp;&nbsp;
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
