--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -47,7 +47,7 @@
     <script src="_content/BlazorInputFile/inputfile.js"></script>
 
     <script src="_content/BlazorUtils/saveAsFile.js"></script>
-
+    @* <script src="~/js/blazorsignaturepad.js"></script> HeadContent 테그로 변경 추천하지은 않음.*@
     <script>
         // 넘어온 ID를 갖는 모달 창 닫기
         function closeModal(modalId) {
@@ -61,3 +61,4 @@
     </script>
 </body>
 </html>
+
