Blazorise 패키지 사용

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -61,6 +61,11 @@ Welcome to your new app.
         <span class="oi oi-wifi" aria-hidden="true"></span> SignaturePadDemo
     </a>&nbsp;&nbsp;
 </div>
+<div>
+    <a href="/blazorise">
+        <span class="oi oi-wifi" aria-hidden="true"></span> blazorise
+    </a>&nbsp;&nbsp;
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
