--- a/ArticleAppBlazorServer/Pages/_Layout.cshtml
+++ b/ArticleAppBlazorServer/Pages/_Layout.cshtml
@@ -48,6 +48,12 @@
 
     <script src="_content/BlazorUtils/saveAsFile.js"></script>
     @* <script src="~/js/blazorsignaturepad.js"></script> HeadContent 테그로 변경 추천하지은 않음.*@
+
+    <link href="_content/Blazorise.Icons.FontAwesome/v6/css/all.min.css" rel="stylesheet">
+
+    <link href="_content/Blazorise/blazorise.css?v=1.7.6.0" rel="stylesheet" />
+    <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css?v=1.7.6.0" rel="stylesheet" />
+
     <script>
         // 넘어온 ID를 갖는 모달 창 닫기
         function closeModal(modalId) {
