--- a/Modern_Admin/Pages/_Layout.cshtml
+++ b/Modern_Admin/Pages/_Layout.cshtml
@@ -143,7 +143,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/charts/chart">
+                <a class="nav-link" href="/charts/ChartSample">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span>
                 </a>
@@ -428,5 +428,10 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+
+    <!-- This is the glue between Blazor and Chart.js -->
+    <script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
 </body>
 </html>
