04_11_[블레이저 강의] Bootstrap의 Tab 기능을 자바스크립트 방식과 Blazor 방식으로 적용하기

--- a/Modern_Admin/Pages/_Layout.cshtml
+++ b/Modern_Admin/Pages/_Layout.cshtml
@@ -110,7 +110,22 @@
                     </div>
                 </div>
             </li>
-
+            <!-- Nav Item - Utilities Collapse Menu -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseDemo"
+                   aria-expanded="true" aria-controls="collapseDemo">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Samples</span>
+                </a>
+                <div id="collapseDemo" class="collapse" aria-labelledby="headingDemo"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Lecture Samples:</h6>
+                        <a class="collapse-item" href="/Samples/TabDemo">TabDemo</a>
+                        <a class="collapse-item" href="/Samples/borders">.</a>
+                    </div>
+                </div>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
 
