04_13. Blazor 강의_JavaScript Interop을 사용하여 Bootstrap Carousel 컴포넌트 실행하도록 설정

--- a/ModernBusiness/Pages/_Layout.cshtml
+++ b/ModernBusiness/Pages/_Layout.cshtml
@@ -92,5 +92,15 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script>
+        //카루셀 실행
+        window.RunCarousel = function () {
+            var carouselElement = document.querySelector('#carouselExampleCaptions');
+            var carousel = new bootstrap.Carousel(carouselElement, {
+                interval: 2000,
+                wrap: true
+            });
+        };
+    </script>
 </body>
 </html>
