05_07 Blazor 기초 강의: VideoDbContext 클래스 테스트를 위한 Razor 컴포넌트 페이지 작성

--- a/ArticleAppBlazorServer/Pages/Index.razor
+++ b/ArticleAppBlazorServer/Pages/Index.razor
@@ -66,6 +66,11 @@ Welcome to your new app.
         <span class="oi oi-wifi" aria-hidden="true"></span> blazorise
     </a>&nbsp;&nbsp;
 </div>
+<div>
+    <a href="/Video/FrmDbContextTest">
+        <span class="oi oi-wifi" aria-hidden="true"></span> FrmDbContextTest
+    </a>&nbsp;&nbsp;
+</div>
 <Dialog Title="Parameta Dialog Title">
     <ChildContent>
         <p>Dialog Content</p>
