--- a/ArticleAppBlazorServer/Pages/Videos/FrmDbContextTest.razor
+++ b/ArticleAppBlazorServer/Pages/Videos/FrmDbContextTest.razor
@@ -1,21 +1,36 @@
 ﻿@page "/Video/FrmDbContextTest"
 @inject ArticleAppDbContext DbContext
+@inject IVideoRepository repository
 
 <h3>FrmDbContextTest</h3>
 
-<ul>
-    @foreach (var video in videos)
-    {
-        <li>
-            @video.Id -  <a href="@video.Url" target="_blank">@video.Title</a>
-        </li>
-    }
-</ul>
+@if (videos == null)
+{
+    <p>Loading...</p>
+}
+else
+{
+    <ul>
+        @foreach (var video in videos)
+        {
+            <li>
+                @video.Id -  <a href="@video.Url" target="_blank">@video.Title</a>
+            </li>
+        }
+    </ul>
+}
+
+
 @code {
     List<Video> videos = new List<Video>();
 
-    protected override void OnInitialized()
+    // protected override void OnInitialized()
+    // {
+    //     //videos = DbContext.Videos.Take(1).ToList();
+    // }
+
+    protected override async Task OnInitializedAsync()
     {
-        videos = DbContext.Videos.Take(1).ToList();
+        videos = await repository.GetVideosAsync();
     }
 }
